--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             <div class="why__cryptochange-block">
                 <div class="text__wrapper">
                     <h2 class="why__header"><span class="yellow__line-o">- </span>Why cryptochange?</h2>
-                    <!--сменил с 14 позиции на 15-->
                     <div class="text__container-bolt-font">
                         <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
                         </p>
@@ -162,38 +161,39 @@
             </div>
             <div class="paginator__wrapper">
                 <div class="button__left" id="left_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_left.png" alt="Prise left"></div>
-                <div class="block__group">
-                    <div class="block__one-ol">
+        <div class="block__group">
+                    <div class="block__one-ol slids">
                         <div class="anycash__one">
                             <img class="anycash" src="img/anycash.svg" alt="anycash" width="100">
                         </div>
                     </div>
-                </div>
-                <div class="block__two-ol">
+
+                <div class="block__two-ol slids">
                     <div class="indacoin__two">
                         <img class="indacoin" src="img/indacoin.svg" alt="indacoin" width="100">
                     </div>
                 </div>
-                <div class="block__three-ol">
+                <div class="block__three-ol slids">
                     <div class="intotheblock__three">
                         <img class="intotheblock" src="img/intotheblock.svg" alt="intotheblock" width="100">
                     </div>
                 </div>
-                <div class="block__four-ol">
+                <div class="block__four-ol slids">
                     <div class="listinghelp__four">
                         <img class="listinghelp" src="img/listinghelp.svg" alt="listinghelp" width="100">
                     </div>
                 </div>
-                <div class="block__five-ol">
+                <div class="block__five-ol slids">
                     <div class="mercuryo__five">
                         <img class="mercuryo" src="img/mercuryo.svg" alt="mercuryo" width="100">
                     </div>
                 </div>
-                <div class="block__six-ol">
+                <div class="block__six-ol slids">
                     <div class="moonpay__six">
                         <img class="moonpay" src="img/moonpay.svg" alt="moonpay" width="100">
                     </div>
                 </div>
+        </div>
                 <div class="button__right" id="right_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_right.png" alt="Prise right"></div>
             </div>
         </section>
@@ -1377,6 +1377,7 @@
     <script src="js/products-carousel.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/ico-progress-slider.js"></script>
+    <script src="js/paginator-wrapper.js"></script>
 </body>
 
 </html>
