--- a/index.html
+++ b/index.html
@@ -258,8 +258,10 @@
         <!--4 section-->
         <!--add class name into tags ( div,img,h2,p)-->
         <section class="advantages">
-            <div class="advantages__icons">
-                <img src="img/bitcoineye.svg" alt="bitcoineye">
+            <div class="advantages__block">
+                <svg class="advantages__icons">
+                    <use href="img/bitcoineye.svg#bitcoineye"></use>
+                </svg>
                 <h2>Limitless Exchanges</h2>
                 <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't
                     have them at all.</p>
