--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
         <!--4 section-->
         <!--add class name into tags ( div,img,h2,p)-->
         <section class="advantages">
+            <div class="container">
+             <div class="row-one">
             <div class="advantages__block">
                 <svg class="advantages__icons">
                     <use href="img/bitcoineye.svg#bitcoineye"></use>
@@ -266,36 +268,40 @@
                 <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't
                     have them at all.</p>
             </div>
-            <div>
+                <div class="advantages__block">
                 <img src="img/rupor.svg" alt="rupor">
                 <h2>Transparent Transactions</h2>
                 <p>All the transactions are recorded in blockchain — unique technology that has changed the world of
                     payments.</p>
             </div>
-            <div>
+                <div class="advantages__block">
                 <img src="img/currencyexchange.svg" alt="currencyexchange">
                 <h2>Instant Exchange</h2>
                 <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in
                     Cryptochange.</p>
             </div>
-            <div>
+            <div class="row-two">
+        </div>
+                <div class="advantages__block">
                 <img src="img/altcoins.svg" alt="altcoins">
                 <h2>All Altcoins</h2>
                 <p>Whether it's Bitcoin, Ethereum, Monero, or any other altcoin, you can exchange it for other cryptos
                     of fiat money.</p>
             </div>
-            <div>
+                <div class="advantages__block">
                 <img src="img/bestrait.svg" alt="bestrait">
                 <h2>Best Rates</h2>
                 <p>No need to try different exchanges to find the best rate. We work with a number of cryptocurrency
                     trading platforms.</p>
             </div>
-            <div>
+                <div class="advantages__block">
                 <img src="img/bank.svg" alt="bank">
                 <h2>Bank Transfers</h2>
                 <p>Do you need to withdraw your crypto assets to your bank account? No worries, we can do that due to
                     our financial partners.</p>
             </div>
+        </div>
+        </div>
         </section>
         <!--end of 4 section-->
         <!--5 section-->
