--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
                     have them at all.</p>
             </div>
                 <div class="advantages__block">
-                <img src="img/rupor.svg" alt="rupor">
+                    <svg class="advantages__icons"
+                <use href="img/rupor.svg#rupor"></use>
                 <h2>Transparent Transactions</h2>
                 <p>All the transactions are recorded in blockchain — unique technology that has changed the world of
                     payments.</p>
