--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
                 <div class="advantages__block">
                     <svg class="advantages__icons"
                 <use href="img/rupor.svg#rupor"></use>
+                </svg>
                 <h2>Transparent Transactions</h2>
                 <p>All the transactions are recorded in blockchain — unique technology that has changed the world of
                     payments.</p>
