--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     have them at all.</p>
             </div>
                 <div class="advantages__block">
-                    <svg class="advantages__rupor"
+                    <svg class="advantages__icons"
                 <use href="img/rupor.svg#rupor"></use>
                 </svg>
                 <h2>Transparent Transactions</h2>
