--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
                 <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't
                     have them at all.</p>
             </div>
+            <div class="container">
+                <div class="row-one">
                 <div class="advantages__block">
                     <svg class="advantages__icons"
                 <use href="img/rupor.svg#rupor"></use>
