--- a/index.html
+++ b/index.html
@@ -268,9 +268,8 @@
                 <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't
                     have them at all.</p>
             </div>
-            <div class="advantages__block">
-                <use href="img/rupor.svg#rupor"></use>
-                </svg>
+                <div class="advantages__block">
+                <img src="img/rupor.svg" alt="rupor">
                 <h2>Transparent Transactions</h2>
                 <p>All the transactions are recorded in blockchain — unique technology that has changed the world of
                     payments.</p>
