--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
                     payments.</p>
             </div>
                 <div class="advantages__block">
-                <img src="img/currencyexchange.svg" alt="currencyexchange">
+                    <svg class="advantages__currencyexchange">
+                <use href="img/currencyexchange.svg#currencyexchange"></use>
+                    </svg>
                 <h2>Instant Exchange</h2>
                 <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in
                     Cryptochange.</p>
