--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
             <div class="row-two">
         </div>
                 <div class="advantages__block">
-                <img src="img/altcoins.svg" alt="altcoins">
+                    <svg class="advantages__altcoins">
+                <use href="img/altcoins.svg#altcoins"></use>
+                    </svg>
                 <h2>All Altcoins</h2>
                 <p>Whether it's Bitcoin, Ethereum, Monero, or any other altcoin, you can exchange it for other cryptos
                     of fiat money.</p>
