--- a/index.html
+++ b/index.html
@@ -295,7 +295,9 @@
                     of fiat money.</p>
             </div>
                 <div class="advantages__block">
-                <img src="img/bestrait.svg" alt="bestrait">
+                    <svg class="advantages__bestrait">
+                <use href="img/bestrait.svg#bestrait"></use>
+                    </svg>
                 <h2>Best Rates</h2>
                 <p>No need to try different exchanges to find the best rate. We work with a number of cryptocurrency
                     trading platforms.</p>
