fixed css block 4

--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
                     trading platforms.</p>
             </div>
                 <div class="advantages__block">
-                <img src="img/bank.svg" alt="bank">
+                    <svg class="advantages__bank">
+                <use href="img/bank.svg#bank"></use>
+                    </svg>
                 <h2>Bank Transfers</h2>
                 <p>Do you need to withdraw your crypto assets to your bank account? No worries, we can do that due to
                     our financial partners.</p>
