adapting to pc diveces

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     have them at all.</p>
             </div>
                 <div class="advantages__block">
-                    <svg class="advantages__rupor">
+                    <svg class="advantages__icons">
                 <use href="img/rupor.svg#rupor"></use>
                     </svg>
                 <h2>Transparent Transactions</h2>
@@ -277,7 +277,7 @@
                     payments.</p>
             </div>
                 <div class="advantages__block">
-                    <svg class="advantages__currencyexchange">
+                    <svg class="advantages__icons">
                 <use href="img/currencyexchange.svg#currencyexchange"></use>
                     </svg>
                 <h2>Instant Exchange</h2>
@@ -287,7 +287,7 @@
             <div class="row-two">
         </div>
                 <div class="advantages__block">
-                    <svg class="advantages__altcoins">
+                    <svg class="advantages__icons">
                 <use href="img/altcoins.svg#altcoins"></use>
                     </svg>
                 <h2>All Altcoins</h2>
@@ -295,7 +295,7 @@
                     of fiat money.</p>
             </div>
                 <div class="advantages__block">
-                    <svg class="advantages__bestrait">
+                    <svg class="advantages__icons">
                 <use href="img/bestrait.svg#bestrait"></use>
                     </svg>
                 <h2>Best Rates</h2>
@@ -303,7 +303,7 @@
                     trading platforms.</p>
             </div>
                 <div class="advantages__block">
-                    <svg class="advantages__bank">
+                    <svg class="advantages__icons">
                 <use href="img/bank.svg#bank"></use>
                     </svg>
                 <h2>Bank Transfers</h2>
