fixing optimize problems

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <!--add class name into tags ( div,img,h2,p)-->
         <section class="advantages">
             <div class="container">
-             <div class="row-one">
+             <div class="row__one">
             <div class="advantages__block">
                 <svg class="advantages__icons">
                     <use href="img/bitcoineye.svg#bitcoineye"></use>
@@ -284,7 +284,7 @@
                 <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in
                     Cryptochange.</p>
             </div>
-            <div class="row-two">
+            <div class="row__two">
         </div>
                 <div class="advantages__block">
                     <svg class="advantages__icons">
