--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <!--4 section-->
         <!--add class name into tags ( div,img,h2,p)-->
         <section class="advantages">
-            <div class="container">
+            <div class="advantages__container">
              <div class="row__one">
             <div class="advantages__block">
                 <svg class="advantages__icons">
