--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                     our financial partners.</p>
             </div>
         </div>
+    </div>
         </section>
         <!--end of 4 section-->
         <!--5 section-->
