added styles in stages.css

--- a/index.html
+++ b/index.html
@@ -296,24 +296,24 @@
         <!--Recommendation-add class name into tags (p)-->
         <section id="roadmap" class="stages">
             <div class="container">
-                <div class="roadmap__title-container roadmap-title">
-                    <div class="roadmap-title">
-                        <h2 class="roadmap-title__title"><span class="yellow__line">- </span>What Stage Are We at?</h2>
+                <div class="stages__title-container stages-title">
+                    <div class="stages-title">
+                        <h2 class="stages-title__title"><span class="title-line">- </span>What Stage Are We at?</h2>
                     </div>
-                    <div class="roadmap-title__addition">
-                        <p class="roadmap-title__addition">Want to learn more about our project?<a
-                                class="roadmap-title__link" href="#"> Clicks here →</a></p>
+                    <div class="stages-title__addition">
+                        <p class="stages-title__addition">Want to learn more about our project?<a
+                                class="stages-title__link" href="#"> Clicks here →</a></p>
                     </div>
                 </div>
-                <div class="roadmap__table-container table">
+                <div class="stages__table-container table">
                     <div class="table__column">
                         <div class="table__figure">
                             <div class="table__circle">
                                 <div class="table__number">01</div>
                             </div>
                         </div>
-                        <div class="table__column column">
-                            <div class="column__text text">
+                        <div class="table__info info">
+                            <div class="info__text text">
                                 <div class="text__month-year">
                                     <p class="text__month-year">January, 2020</p>
                                 </div>
@@ -335,8 +335,8 @@
                                 <div class="table__number">02</div>
                             </div>
                         </div>
-                        <div class="table__column column">
-                            <div class="column__text text">
+                        <div class="table__info info-left">
+                            <div class="info__text text">
                                 <div class="text__month-year">
                                     <p class="text__month-year">May, 2020</p>
                                 </div>
@@ -359,8 +359,8 @@
                                 <div class="table__number">03</div>
                             </div>
                         </div>
-                        <div class="table__column column">
-                            <div class="column__text text">
+                        <div class="table__info info">
+                            <div class="info__text text">
                                 <div class="text__month-year">
                                     <p class="text__month-year">October, 2021</p>
                                 </div>
@@ -385,8 +385,8 @@
                                 <div class="table__number">04</div>
                             </div>
                         </div>
-                        <div class="table__column column">
-                            <div class="column__text text">
+                        <div class="table__info info-left">
+                            <div class="info__text text">
                                 <div class="text__month-year">
                                     <p class="text__month-year">January, 2022</p>
                                 </div>
@@ -408,8 +408,8 @@
                                 <div class="table__number">05</div>
                             </div>
                         </div>
-                        <div class="table__column column">
-                            <div class="column__text text">
+                        <div class="table__info info">
+                            <div class="info__text text">
                                 <div class="text__month-year">
                                     <p class="text__month-year">May, 2022</p>
                                 </div>
@@ -431,8 +431,8 @@
                                 <div class="table__number">06</div>
                             </div>
                         </div>
-                        <div class="table__column column">
-                            <div class="column__text text">
+                        <div class="table__info info-left">
+                            <div class="info__text text">
                                 <div class="text__month-year">
                                     <p class="text__month-year">April, 2022</p>
                                 </div>
@@ -454,8 +454,8 @@
                                 <div class="table__number">07</div>
                             </div>
                         </div>
-                        <div class="table__column column">
-                            <div class="column__text text">
+                        <div class="table__info">
+                            <div class="info__text text">
                                 <div class="text__month-year">
                                     <p class="text__month-year">June, 2022</p>
                                 </div>
