--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
                 <div class="text__wrapper">
                     <h2 class="why__header"><span class="yellow__line-o">- </span>Why cryptochange?</h2>
                     <div class="text__container-bolt-font">
-                        <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
+                        <p class="text__paragraph">Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
                         </p>
                     </div>
                     <div class="text__container">
-                        <p>We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users
+                        <p class="text__paragraph">We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users
                             from around the world. We believe that crypto transactions can be really instant!</p>
                     </div>
                     <div class="text__container">
-                        <p>With our new InstSwap technology, we make all transactions twice faster than before! That is,
+                        <p class="text__paragraph">With our new InstSwap technology, we make all transactions twice faster than before! That is,
                             if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of
                             2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
                     </div>
@@ -98,14 +98,14 @@
                             <div class="image__one">
                                 <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                             </div>
-                            <div class="yellow__arrow">
+                            <div class="incety__arrow">
                                 <p class="textwhite">Based on</p>
                                 <p class="textwhite"><a class="global__white"
                                         href="https://en.wikipedia.org/wiki/Blockchain">Blockchain</a></p>
                             </div>
                         </div>
                         <div class="yellow__arrow">
-                            <div class="yellow__arrow">
+                            <div class="incety__arrow">
                                 <img class="w__icon" src="img/yellow_arrow.svg" alt="yellow_arrow">
                             </div>
                             <p class="textwhite"><a class="global__white"
@@ -155,47 +155,46 @@
                         </div>
                     </div>
                 </div>
-                <div class="image__wrapper"><img class="image__wrapper-why" src="img/why_cryptochange.png"
-                        alt="why_cry">
+                <div class="image__wrapper"><img class="image__wrapper-why" src="img/why_cryptochange.png" alt="why_cry">
                 </div>
             </div>
-            <div class="paginator__wrapper">
+         <div class="paginator__wrapper">
                 <div class="button__left" id="left_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_left.png" alt="Prise left"></div>
         <div class="block__group">
                     <div class="block__one-ol slids">
-                        <div class="anycash__one">
+                        <div class="anycash__one slide-item">
                             <img class="anycash" src="img/anycash.svg" alt="anycash" width="100">
                         </div>
                     </div>
-
                 <div class="block__two-ol slids">
-                    <div class="indacoin__two">
+                    <div class="indacoin__two slide-item">
                         <img class="indacoin" src="img/indacoin.svg" alt="indacoin" width="100">
                     </div>
                 </div>
                 <div class="block__three-ol slids">
-                    <div class="intotheblock__three">
+                    <div class="intotheblock__three slide-item">
                         <img class="intotheblock" src="img/intotheblock.svg" alt="intotheblock" width="100">
                     </div>
                 </div>
                 <div class="block__four-ol slids">
-                    <div class="listinghelp__four">
+                    <div class="listinghelp__four slide-item">
                         <img class="listinghelp" src="img/listinghelp.svg" alt="listinghelp" width="100">
                     </div>
                 </div>
                 <div class="block__five-ol slids">
-                    <div class="mercuryo__five">
+                    <div class="mercuryo__five slide-item">
                         <img class="mercuryo" src="img/mercuryo.svg" alt="mercuryo" width="100">
                     </div>
                 </div>
                 <div class="block__six-ol slids">
-                    <div class="moonpay__six">
+                    <div class="moonpay__six slide-item">
                         <img class="moonpay" src="img/moonpay.svg" alt="moonpay" width="100">
                     </div>
                 </div>
-        </div>
+        </div>   
                 <div class="button__right" id="right_btn"><img class="press__media_arrow-img" src="img/press_media_arrow_right.png" alt="Prise right"></div>
             </div>
+        </div>    
         </section>
         <!--end of 2 section-->
         <!--3 section-->
