adjusted styles in stages and ico-progress

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         <section class="ico-progress">
             <div class="container">
                 <div class="content-container">
-                    <div class="ico-progress__title-container section-title">
-                        <h2 class="section-title__title"><span class="title-line">- </span>ICO Progress</h2>
+                    <div class="ico-progress__title-container ico-progress-title">
+                        <h2 class="ico-progress-title__title"><span class="title-line"></span>ICO Progress</h2>
                         <div class="clock"></div>
                     </div>
                     <div class="ico-progress__row row">
@@ -234,7 +234,7 @@
                             </div>
                         </div>
                         <div class="ico-progress__button">
-                            <a class="ico-progress__button button" href="#">Buy CRP Tokens</a>
+                            <a class="ico-progress__button button" href="#news">Buy CRP Tokens</a>
                         </div>
                     </div>
                     <div class="ico-progress__slider">
@@ -320,7 +320,7 @@
             <div class="container">
                 <div class="stages__title-container stages-title">
                     <div class="stages-title">
-                        <h2 class="stages-title__title"><span class="title-line">- </span>What Stage Are We at?</h2>
+                        <h2 class="stages-title__title"><span class="title-line"></span>What Stage Are We at?</h2>
                     </div>
                     <div class="stages-title__addition">
                         <p class="stages-title__addition">Want to learn more about our project?<a
