More style and position fixes

--- a/index.html
+++ b/index.html
@@ -1393,9 +1393,9 @@
             </div>
             <hr class="footer__line">
             <div class="footer__copyright">
-                <p class="footer__copyright-description-item">© Created by</p>
+                <p class="footer__copyright-description-item1">© Created by</p>
                 <br>
-                <p class="footer__copyright-description-item">All rights Reserved</p>
+                <p class="footer__copyright-description-item2">All rights reserved</p>
             </div>
         </div>
     </footer>
