--- a/index.html
+++ b/index.html
@@ -1370,23 +1370,23 @@
                 <a href="#" class="footer__follow-us-want-to-know-more">Want to know more? →</a>
                 <div class="footer__company-info-icons">
                     <a href="#" class="footer__company-info-icons-item">
-                        <img src="img/facebook-icon.svg" alt="facebook-icon" width="33"
+                        <img src="img/facebook-icon.svg" alt="facebook-icon"
                             class="footer__company-info-icons-facebook-icon">
                     </a>
                     <a href="#" class="footer__company-info-icons-item">
-                        <img src="img/instagram-icon.svg" alt="instagram-icon" width="33"
+                        <img src="img/instagram-icon.svg" alt="instagram-icon"
                             class="footer__company-info-icons-instagram-icon">
                     </a>
                     <a href="#" class="footer__company-info-icons-item">
-                        <img src="img/twitter-icon.svg" alt="twitter-icon" width="33"
+                        <img src="img/twitter-icon.svg" alt="twitter-icon"
                             class="footer__company-info-icons-twitter-icon">
                     </a>
                     <a href="#" class="footer__company-info-icons-item">
-                        <img src="img/youtube-icon.svg" alt="youtube-icon" width="33"
+                        <img src="img/youtube-icon.svg" alt="youtube-icon"
                             class="footer__company-info-icons-youtube-icon">
                     </a>
                     <a href="#" class="footer__company-info-icons-item">
-                        <img src="img/email-icon.svg" alt="email-icon" width="33"
+                        <img src="img/email-icon.svg" alt="email-icon"
                             class="footer__company-info-icons-email-icon">
                     </a>
                 </div>
