--- a/index.html
+++ b/index.html
@@ -1394,15 +1394,16 @@
             <hr class="footer__line">
             <div class="footer__copyright">
                 <p class="footer__copyright-description-item1">© Created by</p>
-                <br>
                 <p class="footer__copyright-description-item2">All rights reserved</p>
             </div>
+            <div id="clock" onload="currentTime()"></div>
         </div>
     </footer>
     <script src="js/media-newspapers.js"></script>
     <script src="js/heder-burger.js"></script>
     <script src="js/products-carousel.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/footerclock.js"></script>
     <script src="js/ico-progress-slider.js"></script>
     <script src="js/paginator-wrapper.js"></script>
     <script src="js/investors-carousel.js"></script>
